--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Home Page
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>Courtney's Portfolio</h1> 
+<p>This is a website showcasing the digital skills i have developed accross my university course so far.</p>
+
+<h2>About me</h2>
+<p>I am a student currently studdying Business Managment with innovation and technology and i have just began my second year at the university of salford. </p>
+
+
+<h2></h2>
+<p></p>
+
+</body>
+</html>
