--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,45 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Contact — Portfolio</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <div class="container">
+    <header class="header">
+      <div class="brand"><h2>Contact</h2></div>
+      <nav class="nav">
+        <a href="index.html">Home</a>
+        <a href="skills.html">Skills</a>
+        <a href="showcase.html">Showcase</a>
+        <a href="problem-solving.html">Problem-Solving</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </header>
+
+    <main class="card">
+      <h2>Get in touch</h2>
+      <p>Email for assessment: <a href="mailto:your.email@example.com" class="badge">your.email@example.com</a></p>
+
+      <h3>Follow / Social</h3>
+      <div class="social-list">
+        <a href="#" target="_blank" rel="noopener">GitHub</a>
+        <a href="#" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="#" target="_blank" rel="noopener">X (Twitter)</a>
+        <a href="#" target="_blank" rel="noopener">Instagram</a>
+      </div>
+
+      <h3 style="margin-top:16px">Contact details (restaurant)</h3>
+      <p>Restaurant name: The Local Kitchen</p>
+      <p>Phone: 01234 567890</p>
+      <p>Email: <a href="mailto:restaurant@example.com">restaurant@example.com</a></p>
+    </main>
+
+    <footer class="footer">Replace placeholder links before final submission.</footer>
+  </div>
+  <script src="js/main.js"></script>
+</body>
+</html>
 
