--- a/index.html
+++ b/index.html
@@ -1,19 +1,64 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<title>Page Title</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Courtney Arnold-Harrison — Portfolio</title>
+  <link rel="stylesheet" href="assets/styles.css">
+  <script defer src="assets/scripts.js"></script>
 </head>
 <body>
+  <header class="site-header">
+    <a class="logo" href="index.html">Courtney A-H</a>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="skills.html">Skills</a>
+      <a href="showcase.html">Showcase</a>
+      <a href="problem-solving.html">Problem-Solving</a>
+      <a href="contact.html" class="cta">Contact</a>
+    </nav>
+  </header>
 
-<h1>Courtney's Portfolio</h1> 
-<p>This is a website showcasing the digital skills i have developed accross my university course so far.</p>
+  <main class="container">
+    <section class="hero">
+      <div class="hero-left">
+        <h1>Hi — I’m Courtney Arnold-Harrison</h1>
+        <p class="tagline">Business Management with Innovation & Technology student focused on web development, digital transformation and data-driven solutions.</p>
+        <p>
+          Motivated, hands-on and resilient — I bring administrative experience, dashboard & data work, and a practical approach to delivering digital services.
+          Current role: Admin Assistant (World Duty Free) — bringing practical SAP & reporting experience to business tech problems. See my CV details throughout the site. :contentReference[oaicite:1]{index=1}
+        </p>
 
-<h2>About me</h2>
-<p>I am a student currently studdying Business Managment with innovation and technology and i have just began my second year at the university of salford. </p>
+        <div class="buttons">
+          <a class="btn primary" href="showcase.html">View Projects</a>
+          <a class="btn ghost" href="problem-solving.html">See Problem-Solving Demo</a>
+        </div>
+      </div>
 
+      <div class="hero-right">
+        <!-- Decorative GIF -->
+        <img alt="animated coding gif" src="https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif" class="hero-gif">
+      </div>
+    </section>
 
-<h2></h2>
-<p></p>
+    <section class="quick-info">
+      <article>
+        <h3>Location</h3>
+        <p>Manchester, UK</p>
+      </article>
+      <article>
+        <h3>Contact</h3>
+        <p>Email: <a href="mailto:Cnah202@gmail.com">Cnah202@gmail.com</a></p>
+      </article>
+      <article>
+        <h3>Current study</h3>
+        <p>BSc Business Management with Innovation & Technology — University of Salford.</p>
+      </article>
+    </section>
+  </main>
 
+  <footer class="site-footer">
+    <p>© <span id="year"></span> Courtney Arnold-Harrison — Portfolio</p>
+  </footer>
 </body>
 </html>
