--- a/contact.html
+++ b/contact.html
@@ -1,45 +1,56 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Contact — Portfolio</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="css/styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Contact — Courtney Arnold-Harrison</title>
+  <link rel="stylesheet" href="assets/styles.css">
+  <script defer src="assets/scripts.js"></script>
 </head>
 <body>
-  <div class="container">
-    <header class="header">
-      <div class="brand"><h2>Contact</h2></div>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="skills.html">Skills</a>
-        <a href="showcase.html">Showcase</a>
-        <a href="problem-solving.html">Problem-Solving</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </header>
+  <header class="site-header">
+    <a class="logo" href="index.html">Courtney A-H</a>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="skills.html">Skills</a>
+      <a href="showcase.html">Showcase</a>
+      <a href="problem-solving.html">Problem-Solving</a>
+      <a href="contact.html" class="cta">Contact</a>
+    </nav>
+  </header>
 
-    <main class="card">
-      <h2>Get in touch</h2>
-      <p>Email for assessment: <a href="mailto:your.email@example.com" class="badge">your.email@example.com</a></p>
+  <main class="container">
+    <h1>Contact</h1>
 
-      <h3>Follow / Social</h3>
-      <div class="social-list">
-        <a href="#" target="_blank" rel="noopener">GitHub</a>
-        <a href="#" target="_blank" rel="noopener">LinkedIn</a>
-        <a href="#" target="_blank" rel="noopener">X (Twitter)</a>
-        <a href="#" target="_blank" rel="noopener">Instagram</a>
+    <section class="contact-card">
+      <h2>Courtney Arnold-Harrison</h2>
+      <p><strong>Email:</strong> <a href="mailto:Cnah202@gmail.com">Cnah202@gmail.com</a></p>
+      <p><strong>Phone:</strong> 07498 819517</p>
+      <p><strong>Location:</strong> Manchester</p>
+      <div class="socials">
+        <h3>Socials</h3>
+        <ul>
+          <li><a href="https://github.com/your-username" target="_blank" rel="noopener">GitHub (replace link)</a></li>
+          <li><a href="https://www.linkedin.com/in/your-profile" target="_blank" rel="noopener">LinkedIn (replace link)</a></li>
+          <li><a href="https://twitter.com/your-handle" target="_blank" rel="noopener">X / Twitter (replace link)</a></li>
+          <li><a href="https://instagram.com/your-handle" target="_blank" rel="noopener">Instagram (replace link)</a></li>
+        </ul>
       </div>
 
-      <h3 style="margin-top:16px">Contact details (restaurant)</h3>
-      <p>Restaurant name: The Local Kitchen</p>
-      <p>Phone: 01234 567890</p>
-      <p>Email: <a href="mailto:restaurant@example.com">restaurant@example.com</a></p>
-    </main>
+      <div class="buttons">
+        <a class="btn primary" href="mailto:Cnah202@gmail.com?subject=Opportunity">Email Courtney</a>
+        <button class="btn ghost" id="download-cv">Download CV (PDF)</button>
+      </div>
 
-    <footer class="footer">Replace placeholder links before final submission.</footer>
-  </div>
-  <script src="js/main.js"></script>
+      <p class="note">Tip: Replace the placeholder social links above with your real accounts before submission.</p>
+    </section>
+
+  </main>
+
+  <footer class="site-footer">
+    <p>© <span id="year-2"></span> Courtney Arnold-Harrison</p>
+  </footer>
 </body>
 </html>
+
 
