--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <div class="hero-right">
         <!-- Decorative GIF -->
-        <img alt="animated coding gif" src="https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif" class="hero-gif">
+        <img alt="animated coding gif" src="ADD PIC LINK" class="hero-gif">
       </div>
     </section>
 
