--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Courtney Arnold-Harrison — Portfolio</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
   <div class="container">
@@ -16,12 +16,14 @@
           <p class="subtitle">Second year student at the University of Salford, currently studying Business Management with Innovation and Technology</p>
           <p class="about-me">Hi! I am an aspiring Data Analyst and this website is going to show you an insight into the technical and workplace skills I have gained so far amongst my career and educational journey.</p>
           <div class="buttons">
-            <a href="showcase.html" class="btn btn-primary">View My Projects</a>
-            <a href="skills.html" class="btn btn-secondary">View My Skills</a>
-            <a href="contact.html" class="btn btn-tertiary">Contact Me</a>
+            <a href="showcase.html" class="btn">View My Projects</a>
+            <a href="skills.html" class="btn">View My Skills</a>
+            <a href="contact.html" class="btn">Contact Me</a>
           </div>
         </div>
       </div>
+
+      <!-- Theme toggle -->
       <div class="theme-toggle">
         <input type="checkbox" id="toggle-mode">
         <label for="toggle-mode" class="toggle-label">
@@ -41,6 +43,7 @@
       <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyOGRqd2Y1bDU4ZTNyOWV1NHZ1bjd0emlpbGE3bzl0bmpnNnk2ZDJxZCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/hmSXoiieHQX6Ix0AdW/giphy.gif" alt="Floating decorative gif">
     </div>
   </div>
-  <script src="js/main.js"></script>
+
+  <script src="assets/theme.js"></script>
 </body>
 </html>
