--- a/skills.html
+++ b/skills.html
@@ -1,62 +1,50 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" data-theme="light">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Skills — Courtney Arnold-Harrison</title>
-  <link rel="stylesheet" href="assets/styles.css">
-  <script defer src="assets/scripts.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/style.css" />
+    <script defer src="assets/script.js"></script>
+    <title>Skills – Courtney Arnold-Harrison</title>
 </head>
 <body>
-  <header class="site-header">
-    <a class="logo" href="index.html">Courtney A-H</a>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="skills.html">Skills</a>
-      <a href="showcase.html">Showcase</a>
-      <a href="problem-solving.html">Problem-Solving</a>
-      <a href="contact.html" class="cta">Contact</a>
-    </nav>
-  </header>
+    <header class="header">
+        <h1 class="page-title">Core Skills & Strengths</h1>
+        <button id="theme-toggle" class="theme-toggle">☾</button>
+    </header>
 
-  <main class="container">
-    <h1>Skills & Qualifications</h1>
+    <main class="skills-container">
+        <section class="cards">
+            <div class="card">
+                <h2>Data Cleaning & Preparation</h2>
+                <p>
+                    Experienced in transforming raw, inconsistent data into accurate and usable datasets.
+                    Skilled in handling missing values, removing duplicates, structuring spreadsheets, and validating
+                    information to maintain strong data integrity.
+                </p>
+            </div>
 
-    <section class="skills-grid">
-      <div class="card">
-        <h3>Technical Skills</h3>
-        <ul>
-          <li>Data analysis (Excel, Power BI basics)</li>
-          <li>Admin systems: SAP, Athena, DUFRY</li>
-          <li>Basic coding: HTML, CSS, JavaScript (hand-coded)</li>
-          <li>IT equipment setup & troubleshooting</li>
-        </ul>
-      </div>
+            <div class="card">
+                <h2>Analytical Thinking & Insight Generation</h2>
+                <p>
+                    Strong ability to interpret data trends, identify correlations, and translate findings into meaningful
+                    insights. Able to communicate conclusions clearly through visuals and written summaries that support
+                    data-driven decision-making.
+                </p>
+            </div>
 
-      <div class="card">
-        <h3>Qualifications</h3>
-        <table class="qual-table">
-          <tr><th>Qualification</th><th>Result</th></tr>
-          <tr><td>BSc Business Management (in progress)</td><td>University of Salford</td></tr>
-          <tr><td>T-Level Digital Business Studies</td><td>Merit</td></tr>
-          <tr><td>Level 2 Computer Science & Tech</td><td>Double Distinction</td></tr>
-        </table>
-      </div>
+            <div class="card">
+                <h2>Technical Tools & Software</h2>
+                <p>
+                    Knowledgeable in Excel (advanced formulas, PivotTables, dashboards) and Power BI for report creation
+                    and visualisation. Skilled in organising workflows and presenting insights through intuitive visuals.
+                </p>
+            </div>
+        </section>
+    </main>
 
-      <div class="card">
-        <h3>Experience Highlights</h3>
-        <ol>
-          <li>Admin Assistant — World Duty Free (SAP inventory & reporting). :contentReference[oaicite:2]{index=2}</li>
-          <li>Admin Intern — Age UK Stockport (interactive Annual Figures Dashboard). :contentReference[oaicite:3]{index=3}</li>
-          <li>3D Campus Safety Project Lead — virtual walkthrough & editing. :contentReference[oaicite:4]{index=4}</li>
-        </ol>
-      </div>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <p>© <span id="year-3"></span> Courtney Arnold-Harrison</p>
-  </footer>
+    <footer class="footer-note">
+        <p>Please note this portfolio was written in 2025 during second year of university and experiences/work experience/qualifications may need updating since then.</p>
+    </footer>
 </body>
 </html>
-
