--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Courtney Arnold-Harrison — Portfolio</title>
-  <link rel="stylesheet" href="assets/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home — Courtney Arnold-Harrison</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <script defer src="assets/script.js"></script>
 </head>
 <body>
-  <div class="container">
     <header class="header">
-      <div class="brand">
-        <img src="https://p7.hiclipart.com/preview/132/775/609/university-of-salford-pendleton-greater-manchester-student-master-s-degree-student.jpg" alt="Courtney Arnold-Harrison headshot" class="headshot">
-        <div class="hero-text">
-          <h1>Courtney Arnold-Harrison</h1>
-          <p class="subtitle">Second year student at the University of Salford, currently studying Business Management with Innovation and Technology</p>
-          <p class="about-me">Hi! I am an aspiring Data Analyst and this website is going to show you an insight into the technical and workplace skills I have gained so far amongst my career and educational journey.</p>
-          <div class="buttons">
-            <a href="showcase.html" class="btn">View My Projects</a>
-            <a href="skills.html" class="btn">View My Skills</a>
-            <a href="contact.html" class="btn">Contact Me</a>
-          </div>
+        <div class="brand">
+            <img src="https://cdn.theuniguide.co.uk/uploads/image/file/11329/University_of_Salford.png" alt="Headshot" class="headshot">
+            <div>
+                <h1>Courtney Arnold-Harrison</h1>
+                <p>Second year student at the university of Salford, currently studying Business management with innovation and technology.</p>
+            </div>
         </div>
-      </div>
-
-      <!-- Theme toggle -->
-      <div class="theme-toggle">
-        <input type="checkbox" id="toggle-mode">
-        <label for="toggle-mode" class="toggle-label">
-          <span class="sun">☀️</span>
-          <span class="moon">🌙</span>
-          <span class="ball"></span>
-        </label>
-      </div>
+        <div class="header-right">
+            <nav class="nav">
+                <a href="index.html">Home</a>
+                <a href="skills.html">Skills</a>
+                <a href="showcase.html">Showcase</a>
+                <a href="problem-solving.html">Problem-Solving</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+            <button id="theme-toggle" class="theme-toggle">☾</button>
+        </div>
     </header>
 
-    <footer class="footer">
-      Please note this portfolio was written in 2025 during second year of university and experiences/work experience/qualifications may need updating since then.
+    <main class="container">
+        <section class="hero card">
+            <div class="hero-text">
+                <p>Hi! I am an aspiring Data Analyst and this website is going to show you an insight into the technical and workplace skills I have gained so far amongst my career and educational journey.</p>
+                <div class="buttons" style="margin-top:16px;">
+                    <a href="showcase.html" class="btn">View My Projects</a>
+                    <a href="skills.html" class="btn">View My Skills</a>
+                    <a href="contact.html" class="btn">Contact Me</a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <img src="assets/images/floating.gif" alt="Decorative floating GIF" class="floating-gif">
+
+    <footer class="footer-note">
+        <p>Please note this portfolio was written in 2025 during second year of university and experiences/work experience/qualifications may need updating since then.</p>
     </footer>
-
-    <!-- Floating GIF as decorative footnote -->
-    <div class="floating-footnote float">
-      <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyOGRqd2Y1bDU4ZTNyOWV1NHZ1bjd0emlpbGE3bzl0bmpnNnk2ZDJxZCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/hmSXoiieHQX6Ix0AdW/giphy.gif" alt="Floating decorative gif">
-    </div>
-  </div>
-
-  <script src="assets/theme.js"></script>
 </body>
 </html>
