--- a/skills.html
+++ b/skills.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="dark">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Skills — Courtney Arnold-Harrison</title>
+    <link rel="stylesheet" href="assets/style.css">
     <script defer src="assets/script.js"></script>
-    <title>Skills – Courtney Arnold-Harrison</title>
 </head>
 <body>
     <header class="header">
-        <h1 class="page-title">Core Skills & Strengths</h1>
-        <button id="theme-toggle" class="theme-toggle">☾</button>
+        <h1 class="page-title">Skills & Strengths</h1>
+        <div class="header-right">
+            <nav class="nav">
+                <a href="index.html">Home</a>
+                <a href="skills.html">Skills</a>
+                <a href="showcase.html">Showcase</a>
+                <a href="problem-solving.html">Problem-Solving</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+            <button id="theme-toggle" class="theme-toggle">☾</button>
+        </div>
     </header>
 
-    <main class="skills-container">
-        <section class="cards">
+    <main class="container">
+        <section class="grid grid-3">
+
             <div class="card">
-                <h2>Data Cleaning & Preparation</h2>
-                <p>
-                    Experienced in transforming raw, inconsistent data into accurate and usable datasets.
-                    Skilled in handling missing values, removing duplicates, structuring spreadsheets, and validating
-                    information to maintain strong data integrity.
-                </p>
+                <h2>Data Analysis</h2>
+                <p>Skilled in gathering, cleaning, and analysing datasets using Excel and Power BI to generate actionable insights for business decisions.</p>
             </div>
 
             <div class="card">
-                <h2>Analytical Thinking & Insight Generation</h2>
-                <p>
-                    Strong ability to interpret data trends, identify correlations, and translate findings into meaningful
-                    insights. Able to communicate conclusions clearly through visuals and written summaries that support
-                    data-driven decision-making.
-                </p>
+                <h2>Technical Tools</h2>
+                <p>Experienced in Excel and Power BI for visualising and reporting data. Capable of creating dashboards and presenting findings in clear, structured formats.</p>
             </div>
 
             <div class="card">
-                <h2>Technical Tools & Software</h2>
-                <p>
-                    Knowledgeable in Excel (advanced formulas, PivotTables, dashboards) and Power BI for report creation
-                    and visualisation. Skilled in organising workflows and presenting insights through intuitive visuals.
-                </p>
+                <h2>Problem Solving & Communication</h2>
+                <p>Able to break down complex problems, identify patterns, and communicate findings effectively to both technical and non-technical stakeholders.</p>
             </div>
+
         </section>
     </main>
+
+    <img src="assets/images/floating.gif" alt="Decorative floating GIF" class="floating-gif">
 
     <footer class="footer-note">
         <p>Please note this portfolio was written in 2025 during second year of university and experiences/work experience/qualifications may need updating since then.</p>
     </footer>
 </body>
 </html>
+
