--- a/showcase.html
+++ b/showcase.html
@@ -1,48 +1,59 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Showcase — Courtney Arnold-Harrison</title>
+    <link rel="stylesheet" href="assets/style.css">
     <script defer src="assets/script.js"></script>
-    <title>Projects – Courtney Arnold-Harrison</title>
 </head>
 <body>
     <header class="header">
         <h1 class="page-title">Project Showcase</h1>
-        <button id="theme-toggle" class="theme-toggle">☾</button>
+        <div class="header-right">
+            <nav class="nav">
+                <a href="index.html">Home</a>
+                <a href="skills.html">Skills</a>
+                <a href="showcase.html">Showcase</a>
+                <a href="problem-solving.html">Problem-Solving</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+            <button id="theme-toggle" class="theme-toggle">☾</button>
+        </div>
     </header>
 
-    <main class="projects-container">
-        <section class="project-grid">
+    <main class="container grid grid-3">
 
-            <!-- Project 1 -->
-            <div class="project-card">
-                <img src="assets/images/project1.gif" alt="Project 1 visual" class="project-img" />
-                <h2 class="project-title">Business Data Insights Dashboard</h2>
-                <p class="project-desc">
-                    This project involved creating an interactive data dashboard to explore key business performance metrics. The goal was to transform raw data into a clear, visual narrative that could support decision-making in a business environment. I focused on structuring datasets, identifying meaningful trends, and designing visual outputs that were both accessible and insightful.
-                </p>
-                <button class="project-btn">View Project</button>
-            </div>
+        <div class="card project-card">
+            <h2>Administrative Intern – Age UK Stockport</h2>
+            <p><strong>Role:</strong> Administrative Intern</p>
+            <p><strong>Work Experience:</strong></p>
+            <ul>
+                <li>Developed an interactive "Annual Figures Dashboard" used for real-time reporting and strategic planning.</li>
+                <li>Supported digital hub operations by setting up IT equipment.</li>
+                <li>Analysed financial data to forecast future expenditure based on historical trends.</li>
+            </ul>
+        </div>
 
-            <!-- Project 2 -->
-            <div class="project-card">
-                <h2 class="project-title">3D Campus Safety Project Lead – University of Manchester</h2>
-                <p class="project-desc">
-                    Led a team to create a 3D virtual walkthrough of university fire exits, improving campus safety awareness. Managed footage capture and editing using specialist 3D cameras and editing tools. Delegated roles within the team and ensured all project milestones were delivered on time.
-                </p>
-                <button class="project-btn">View Project</button>
-            </div>
+        <div class="card project-card">
+            <h2>3D Campus Safety Project Lead – University of Manchester</h2>
+            <p><strong>Role:</strong> Project Lead</p>
+            <p><strong>Work Experience:</strong></p>
+            <ul>
+                <li>Led a team to create a 3D virtual walkthrough of university fire exits.</li>
+                <li>Operated and edited footage using specialist 3D camera and editing tools.</li>
+                <li>Delegated team roles and ensured timely delivery of project milestones.</li>
+            </ul>
+        </div>
 
-        </section>
     </main>
 
-    <img src="assets/images/floating.gif" alt="Decorative floating GIF" class="floating-gif" />
+    <img src="assets/images/floating.gif" alt="Decorative floating GIF" class="floating-gif">
 
     <footer class="footer-note">
         <p>Please note this portfolio was written in 2025 during second year of university and experiences/work experience/qualifications may need updating since then.</p>
     </footer>
 </body>
 </html>
+
 
